--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.android.support:design:22.2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    //    compile 'com.facebook.fresco:fresco:0.11.0'
+    compile 'com.makeramen:roundedimageview:2.2.1'
     compile name: 'SMSSDK-2.1.0', ext: 'aar'
     compile name: 'SMSSDKGUI-2.1.0', ext: 'aar'
     compile project(':vitamio')
