--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,16 +37,7 @@
             android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
             android:name=".activity.LiveListActivity"
-            android:label="@string/title_activity_live_list" />
-        <activity
-            android:name=".activity.LivePlayerActivity"
-            android:label="@string/title_activity_live_player"></activity>
-        <activity
-            android:name=".activity.RegisterActivity"
-            android:label="@string/title_activity_register"></activity>
-        <activity
-            android:name=".activity.MainPageActivity"
-            android:label="@string/title_activity_main">
+            android:label="@string/title_activity_live_list">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -54,8 +45,19 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".activity.LivePlayerActivity"
+            android:label="@string/title_activity_live_player" />
+        <activity
+            android:name=".activity.RegisterActivity"
+            android:label="@string/title_activity_register" />
+        <activity
+            android:name=".activity.MainPageActivity"
+            android:label="@string/title_activity_main">
+        </activity>
+        <activity
             android:name=".activity.WebviewActivity"
-            android:label="@string/title_activity_main"></activity>
+            android:label="@string/title_activity_main" />
+        <activity android:name=".activity.FollowActivity"></activity>
     </application>
 
 </manifest>
