fix crash about service

--- a/com.yoosee/build.gradle
+++ b/com.yoosee/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     }
 }
 
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
