--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,6 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'org.apache.httpcomponents:httpcore:4.4.4'
     compile project(':vitamio')
-//    compile project(':com.yoosee')
+    compile project(':com.yoosee')
     compile project(':slidingMenu')
 }
