--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         android:theme="@style/AppTheme"
         tools:replace="android:label,android:icon,android:name">
         <activity android:name=".activity.LaunchActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_launch">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,6 +36,7 @@
         </activity>
         <activity
             android:name=".activity.LoginActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_login"></activity>
         <!--<activity-->
             <!--android:name="com.mob.tools.MobUIShell"-->
@@ -43,18 +45,22 @@
             <!--android:windowSoftInputMode="stateHidden|adjustResize" />-->
         <activity
             android:name=".activity.LiveListActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_live_list"></activity>
         <activity
             android:name=".activity.LivePlayerActivity"
             android:label="@string/title_activity_live_player" />
         <activity
             android:name=".activity.RegisterActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_register" />
         <activity
             android:name=".activity.MainPageActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_main"></activity>
         <activity
             android:name=".activity.WebviewActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_main" />
         <activity android:name=".activity.FollowActivity" />
     </application>
