--- a/com.yoosee/build.gradle
+++ b/com.yoosee/build.gradle
@@ -11,6 +11,7 @@ apply plugin: 'com.android.library'
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
+    compile 'com.android.support:support-v4:24.1.1'
 }
 
 android {
