--- a/slidingMenu/build.gradle
+++ b/slidingMenu/build.gradle
@@ -6,10 +6,10 @@ buildscript {
         classpath 'com.android.tools.build:gradle:2.0.0'
     }
 }
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 
 dependencies {
-    compile 'com.android.support:support-v4:13.0.0'
+    compile 'com.android.support:support-v4:24.1.1'
 }
 
 android {
